<resources>
    <string name="app_name">El Económico</string>
    <string name="imagen_logo_grupo" translatable="false" />
    <string name="el_econ_mico" translatable="false">El Económico</string>
    <!--Login y Registrarse-->
    <string name="registro" translatable="false">Registro</string>
    <string name="nombre" translatable="false">Nombre:</string>
    <string name="apellido" translatable="false">Apellido:</string>
    <string name="correo_electronico" translatable="false">Correo Electrónico:</string>
    <string name="passwd" translatable="false">Contraseña:</string>
    <string name="telefono" translatable="false">Teléfono:</string>
    <string name="direccion" translatable="false">Dirección:</string>
    <string name="registrarse" translatable="false">Registrarse</string>
    <string name="Bienvenido" translatable="false">BIENVENIDO</string>
    <string name="iniciar_sesion" translatable="false">Iniciar Sesión</string>
    <string name="no_tienes_cuenta" translatable="false">¿No tienes cuenta?</string>
    <string name="forgetpass" translatable="false">Restablecer contraseña</string>
    <!--Administrador-->
    <string name="perfil_admin" translatable="false">Perfil</string>
    <string name="login" translatable="false">Login</string>
    <string name="Bebidas" translatable="false" />
    <string name="categoria" translatable="false">Categoria</string>
    <string name="qu_desea_comprar_hoy" translatable="false">¿Qué desea comprar hoy?</string>
    <string name="categorias" translatable="false">Categorias</string>
    <string name="categori" translatable="false">Categoria</string>
    <string name="lacteos" translatable="false">Lacteos</string>
    <string name="carne" translatable="false">Carne</string>
    <string name="area_de_bebes" translatable="false">Area de bebes</string>
    <string name="nueva_contrase_a" translatable="false">Nueva contraseña</string>
    <string name="ingrese_el_codigo" translatable="false">Ingrese el codigo</string>
    <string name="ingrese_su_nueva_contrase_a" translatable="false">Ingrese su nueva contraseña</string>
    <string name="confirmar_contrase_a" translatable="false">Confirmar contraseña</string>
    <string name="cambiar_contrase_a" translatable="false">Cambiar contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="imgen_productos" translatable="false" />
    <string name="improdructos" translatable="false">imProdructos</string>
    <string name="productos" translatable="false">Productos</string>

</resources>