<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityNewPassword">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_margin="0dp"
        android:background="@drawable/fondo0"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="arial"
            android:gravity="center"
            android:text="@string/nueva_contrase_a"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/modal"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="400dp"
        android:background="@color/white"
        android:elevation="5dp"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="15dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingrese_el_codigo"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtNCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/app_init"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorLink="@color/app_init"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingrese_su_nueva_contrase_a"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/txtNPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/app_init"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorLink="@color/app_init"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmar_contrase_a"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtNCPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/app_init"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorLink="@color/app_init"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded"
                android:text="@string/cambiar_contrase_a"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>