<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ActivityPerfilAdmin">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:background="@drawable/fondo0"
        android:padding="10dp">


        <ImageView
            android:id="@+id/imgvSalir"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_action_name"
            android:gravity="center" />


    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/idFotoPerfilAdmin"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/ic_menu_camera"
                    android:textColor="#000000" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nombre"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/txtRNombre"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:textColor="#000000"
                tools:ignore="LabelFor,SpeakableTextPresentCheck"
                android:ems="10"
                android:importantForAutofill="no"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/apellido"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/txtRApellido"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:textColor="#000000"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/correo_electronico"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/txtcorreo"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/passwd"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/txtpass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:inputType="textPassword"
                android:textColor="#000000"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/telefono"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/txtRTelefono"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:ems="10"
                android:inputType="phone"
                android:textColor="#000000"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/direccion"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/txtRDireccion"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:textColor="#000000"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnRRegistrar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/button_rounded"
                android:text="Actualizar"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>