<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ActivityPerfilAdmin">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:background="@drawable/fondo0"
        android:padding="10dp">


        <ImageView
            android:id="@+id/imgvSalir"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_action_name"
            android:gravity="center" />

        <TextView
            android:layout_width="137dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/registrarse"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="203dp"
                android:layout_marginTop="20dp"
                android:gravity="top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="157dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/txtRPerfil"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/ic_menu_camera" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnRTomarFoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Tomar foto" />

                    <Button
                        android:id="@+id/btnRAbrirGaleria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Abrir galeria" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Nombre de usuario:"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtRUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/correo_electronico"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtRCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Contraseña:"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtRClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/nombre"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtRNombre"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="#000000"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/apellido"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtRApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:inputType="textPersonName"
                android:textColor="#000000"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="DNI:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtRDNI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:inputType="number"
                android:textColor="#000000"
                android:maxLength="13"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="Genero:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/txtRGenero"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/telefono"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtRTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:ems="10"
                android:inputType="phone"
                android:textColor="#000000"
                android:maxLength="8"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/direccion"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtRDireccion"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:inputType="textImeMultiLine"
                android:textColor="#000000"
                android:singleLine="true"
                tools:ignore="SpeakableTextPresentCheck" />


            <Button
                android:id="@+id/btnRRegistrar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_rounded"
                android:text="Registrar"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>