<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityTienda">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/fondo0"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgvSalir"
            android:layout_width="48dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_action_name"
            android:gravity="center" />

        <EditText
            android:id="@+id/im"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@color/app_init"
            android:elevation="1dp"
            android:ems="10"
            android:fontFamily="arial"
            android:hint="@string/qu_desea_comprar_hoy"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/black"
            android:textCursorDrawable="@color/app_init"
            android:textSize="16sp"
            tools:fontFamily="@font/rubik_regular"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="598dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="vertical" >


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/categori"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:fontFamily="@font/rubik_regular" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:rowCount="4">

            <androidx.cardview.widget.CardView
                android:layout_width="301dp"
                android:layout_height="141dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/fondo_blanco"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:id="@+id/btnBebidas"
                        android:layout_width="156dp"
                        android:layout_height="83dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/iconobebidas" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="Bebidas"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/black"
                        android:textStyle="normal" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="313dp"
                android:layout_height="117dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/btnLacteos"
                        android:layout_width="156dp"
                        android:layout_height="83dp"

                        android:layout_weight="2"
                        app:srcCompat="@drawable/productos_lacteos" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/lacteos"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="313dp"
                android:layout_height="117dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/btncarnes"
                        android:layout_width="156dp"
                        android:layout_height="83dp"
                        android:layout_weight="2"
                        app:srcCompat="@drawable/carne" />

                    <TextView
                        android:id="@+id/imgCarnes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/carne"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="313dp"
                android:layout_height="117dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/btnBebes"
                        android:layout_width="156dp"
                        android:layout_height="83dp"
                        android:layout_weight="2"
                        app:srcCompat="@drawable/baby_11_119897" />

                    <TextView
                        android:id="@+id/bebes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/area_de_bebes"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>

        </LinearLayout>




    </ScrollView>

</LinearLayout>

